--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.23.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
   },
   "devDependencies": {
     "babel-core": "6.26.*",
