--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.23.0",
     "moment": "^2.29.1",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-dom": "^16.8.0",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "babel-core": "6.26.*",
