--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.23.0",
+    "clsx": "^1.1.1",
     "moment": "^2.29.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
